@@ -1,3 +1,4 @@
+ - Change dolfin_start() --> dolfin_end()
  - Add chapters to manual: reference about, elements, installation, contributing, license
  - Use new template fenicsmanual.cls for manual
  - Add compiler flag -U__STRICT_ANSI__ when compiling under Cygwin 
